Texture images are not properly displayed in the material preview in BI when using SSS #40364

Closed
opened 2014-05-26 12:19:10 +02:00 by Riccardo Giovanetti · 12 comments

System Information
i7 720QM 1.6GHz, Windows 7 Pro 64bit w/SP1, 8GB RAM, Nvidia GeForce GTS 360M w/1GB VRAM

Blender Version
Broken: 2.70a (Hash: f93bc76) 64bit (blender-2.70a-windows64.zip)
Broken: 2.71 testbuild1 (Hash: c56bbcc) 64bit (blender-2.71-testbuild1-win64.zip)
Worked: 2.69.0 64bit (r60995)

Short description of error
In the above 2.71 testbuild as well as in the 2.70a revision I noticed that if a material in Blender Internal has an image texture applied and mapped to it, as soon as you activate the Subsurface Scattering option in the Material properties panel the texture is no longer visible in the material preview window if the SSS Blend for Textures is set to value 0, and becomes visible the more you raise this value becoming fully visible at Blend Texture value of 1. The image texture is instead displayed correctly in Blender version 2.69.

I don't know if this was an intentional design change or if it's a bug but surely it doesn't help to evaluate the SSS effect correctly unless you render the object. Please, let me know if I misunderstood the BI SSS behaviour or else. Thanks.

Exact steps for others to reproduce the error
Open Blender and set it to Blender Internal render, with the default scene and the default material assigned to the cube go to the material's textures panel, change the texture type to Image or Movie and assign any image to the cube (you can set texture Mapping to Generated, Cube Projection). Then, go back to the Material tab and tick the SSS option; with the Blend Texture at value 0 the image texture previously visible in the material preview box is now gone and the material displays only the base diffuse color. If you raise the Blend Texture value the mapped image start becoming visible until you reach value of 1 where it's fully displayed in the preview.

**System Information** i7 720QM 1.6GHz, Windows 7 Pro 64bit w/SP1, 8GB RAM, Nvidia GeForce GTS 360M w/1GB VRAM **Blender Version** Broken: 2.70a (Hash: f93bc76) 64bit (blender-2.70a-windows64.zip) Broken: 2.71 testbuild1 (Hash: c56bbcc) 64bit (blender-2.71-testbuild1-win64.zip) Worked: 2.69.0 64bit (r60995) **Short description of error** In the above 2.71 testbuild as well as in the 2.70a revision I noticed that if a material in Blender Internal has an image texture applied and mapped to it, as soon as you activate the Subsurface Scattering option in the Material properties panel the texture is no longer visible in the material preview window if the SSS Blend for Textures is set to value 0, and becomes visible the more you raise this value becoming fully visible at Blend Texture value of 1. The image texture is instead displayed correctly in Blender version 2.69. I don't know if this was an intentional design change or if it's a bug but surely it doesn't help to evaluate the SSS effect correctly unless you render the object. Please, let me know if I misunderstood the BI SSS behaviour or else. Thanks. **Exact steps for others to reproduce the error** Open Blender and set it to Blender Internal render, with the default scene and the default material assigned to the cube go to the material's textures panel, change the texture type to Image or Movie and assign any image to the cube (you can set texture Mapping to Generated, Cube Projection). Then, go back to the Material tab and tick the SSS option; with the Blend Texture at value 0 the image texture previously visible in the material preview box is now gone and the material displays only the base diffuse color. If you raise the Blend Texture value the mapped image start becoming visible until you reach value of 1 where it's fully displayed in the preview.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Harvester

Added subscriber: @Harvester

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

SSS generally doesn't seem to work in BI previews any longer. Whether this is a deliberate change or a bug i can't say. It's a bit difficult to see in 2.69 previews, but you can increase the sss scale and in 2.70 you can increase the preview size as well, so it becomes quite clear there is no sss happening at all in 2.70.

SSS generally doesn't seem to work in BI previews any longer. Whether this is a deliberate change or a bug i can't say. It's a bit difficult to see in 2.69 previews, but you can increase the sss scale and in 2.70 you can increase the preview size as well, so it becomes quite clear there is no sss happening at all in 2.70.
Member

Test file: test_03.blend

Test file: [test_03.blend](https://archive.blender.org/developer/F92260/test_03.blend)

Hi Lukas, so it's confirmed SSS doesn't work in BI previews any longer also with the latest 2.71 version, but since the 3D Viewport Shading "Rendered" works fine in displaying the SSS effect in BI, there is a way to preview it in realtime on materials.

I will look forward for this problem to be eventually corrected in the future and thank you.

Hi Lukas, so it's confirmed SSS doesn't work in BI previews any longer also with the latest 2.71 version, but since the 3D Viewport Shading "Rendered" works fine in displaying the SSS effect in BI, there is a way to preview it in realtime on materials. I will look forward for this problem to be eventually corrected in the future and thank you.
Sergey Sharybin self-assigned this 2014-07-01 19:51:45 +02:00

Was thinking another day, why not look into this report :)

Was thinking another day, why not look into this report :)

This issue was referenced by 7587e82c28

This issue was referenced by 7587e82c288e46ef257e1de12cb0952ad234abff

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7587e82c28.

Closed by commit 7587e82c28.

Great job Sergey! I sincerely thank you.

Great job Sergey! I sincerely thank you.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40364
No description provided.